--- a/popup/style.css
+++ b/popup/style.css
@@ -7,3 +7,20 @@
   background-color: red;
   color: white;
 }
+
+ul {
+  padding: 0;
+  overflow: auto;
+  width: 150px;
+  max-height: 200px;
+}
+
+li {
+  list-style-type: none;
+  padding: 3px;
+}
+
+li:hover {
+  background-color: #ccc;
+  cursor: pointer;
+}
