Fixed initialisation and error messaging.
Fixed backup.js only running on installation, and not when a fresh chrome instance was opened after installation.

Improved error messaging.

Improved DOM element creation in ui.js using DOMParser.

--- a/popup/style.css
+++ b/popup/style.css
@@ -74,7 +74,7 @@ body {
 
 #fetched-playlists-container > div,
 #message-container > div,
-#error-contianer > div {
+#error-container > div {
   padding: 0px 10px;
 }
 
