--- a/popup/style.css
+++ b/popup/style.css
@@ -6,26 +6,24 @@ body {
   cursor: pointer;
 }
 
-.checkmark-blue[type='checkbox'].filled-in:not(:checked)
-  + span:not(.lever):after {
+.checkmark-blue[type="checkbox"].filled-in:not(:checked) + span:not(.lever):after {
   background-color: transparent;
   border: 2px solid #9e9e9e;
 }
 
-.checkmark-blue[type='checkbox'].filled-in:checked + span:not(.lever):after {
+.checkmark-blue[type="checkbox"].filled-in:checked + span:not(.lever):after {
   border: 2px solid #2962ff;
   background-color: #2962ff;
 }
 
-.checkmark-align[type='checkbox'].filled-in:not(:checked)
-  + span:not(.lever):after,
-.checkmark-align[type='checkbox'].filled-in:checked + span:not(.lever):after {
+.checkmark-align[type="checkbox"].filled-in:not(:checked) + span:not(.lever):after,
+.checkmark-align[type="checkbox"].filled-in:checked + span:not(.lever):after {
   top: 50%;
   margin-top: -10px;
 }
 
-.checkmark-align[type='checkbox'].filled-in + span:not(.lever):before,
-.checkmark-align[type='checkbox'].filled-in + span:not(.lever):after {
+.checkmark-align[type="checkbox"].filled-in + span:not(.lever):before,
+.checkmark-align[type="checkbox"].filled-in + span:not(.lever):after {
   margin-top: 5px;
 }
 
@@ -72,6 +70,15 @@ body {
   color: #909090 !important;
 }
 
+#create-new-playlist-form > :nth-child(2) {
+  margin-bottom: 0;
+}
+
+#title-input {
+  height: 1.5em;
+  font-size: 1em;
+}
+
 #fetched-playlists-container > div,
 #message-container > div,
 #error-container > div {
@@ -99,8 +106,7 @@ body {
   border-bottom: 1px solid #ff0000;
 }
 
-.btn-inline,
-.btn-cancel {
+.btn-inline {
   border: none;
   height: 36px;
   line-height: 36px;
@@ -108,18 +114,17 @@ body {
   background-color: transparent;
   color: #065fd4;
 }
-.btn-inline:hover,
-.btn-cancel:hover {
+.btn-inline:hover {
   cursor: pointer;
   box-shadow: none;
 }
 .btn-inline:focus {
   background-color: #e1e1e1;
 }
-.btn-cancel {
+.btn-message-box {
   color: #3493db;
 }
-.btn-cancel:focus {
+.btn-message-box:focus {
   background-color: #474747;
 }
 
@@ -129,8 +134,8 @@ body {
 
 body {
   font-size: 14px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue",
+    sans-serif;
 }
 
 body {
