--- a/popup/style.css
+++ b/popup/style.css
@@ -2,63 +2,39 @@ body {
   width: 275px;
 }
 
-.pointer {
-  cursor: pointer;
+#quick-playlists {
+  /* max-height = 8 links */
+  max-height: 422px;
+  overflow-y: auto;
 }
 
-.checkmark-blue[type="checkbox"].filled-in:not(:checked) + span:not(.lever):after {
-  background-color: transparent;
-  border: 2px solid #9e9e9e;
-}
-
-.checkmark-blue[type="checkbox"].filled-in:checked + span:not(.lever):after {
-  border: 2px solid #2962ff;
-  background-color: #2962ff;
-}
-
-.checkmark-align[type="checkbox"].filled-in:not(:checked) + span:not(.lever):after,
-.checkmark-align[type="checkbox"].filled-in:checked + span:not(.lever):after {
-  top: 50%;
-  margin-top: -10px;
-}
-
-.checkmark-align[type="checkbox"].filled-in + span:not(.lever):before,
-.checkmark-align[type="checkbox"].filled-in + span:not(.lever):after {
-  margin-top: 5px;
-}
-
-#message-container,
 #error-container {
   border-radius: 2px;
 }
 
-#channel-playlists-list {
-  max-height: 200px;
-  overflow: auto;
-}
-
-#channel-playlists-list .row {
-  margin-bottom: 8px;
-}
-
-.material-icons.smaller {
-  font-size: 16px;
-}
-
 #num-videos {
   cursor: default;
+  margin-top: 10px;
+  font-size: 1.1em;
+}
+
+#error-container > div {
+  padding: 0px 10px;
+}
+
+#error-message {
+  padding: 20px 0px;
+}
+
+.pointer {
+  cursor: pointer;
 }
 
 .row {
   margin-bottom: 10px;
 }
 
-.mt10 {
-  margin-top: 10px;
-}
-
-#sign-in-button,
-.hover-highlight {
+.p10 {
   padding: 10px;
 }
 
@@ -70,73 +46,9 @@ body {
   color: #909090 !important;
 }
 
-#create-new-playlist-form > :nth-child(2) {
-  margin-bottom: 0;
-}
-
-#title-input {
-  height: 1.5em;
-  font-size: 1em;
-}
-
-#fetched-playlists-container > div,
-#message-container > div,
-#error-container > div {
-  padding: 0px 10px;
-}
-
-#error-message {
-  padding: 20px 0px;
-}
-
-#title-input {
-  margin-bottom: 0;
-}
-
-.input-message {
-  font-size: 12px;
-}
-
-.form-warning span,
-.form-warning label {
-  color: #ff0000;
-}
-
-.form-warning input {
-  border-bottom: 1px solid #ff0000;
-}
-
-.btn-inline {
-  border: none;
-  height: 36px;
-  line-height: 36px;
-  padding: 0 16px;
-  background-color: transparent;
-  color: #065fd4;
-}
-.btn-inline:hover {
-  cursor: pointer;
-  box-shadow: none;
-}
-.btn-inline:focus {
-  background-color: #e1e1e1;
-}
-.btn-message-box {
-  color: #3493db;
-}
-.btn-message-box:focus {
-  background-color: #474747;
-}
-
 /* Overwrite injected script */
 /* The following elements are placed by materialize at html level */
 /* injected script is overwriting them at body level */
-
-body {
-  font-size: 14px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue",
-    sans-serif;
-}
 
 body {
   font-family: Roboto, Noto, sans-serif;
